add Location Maps in Game Info page

--- a/pages/game_info.html
+++ b/pages/game_info.html
@@ -17,6 +17,7 @@
         <a href="./contact.html">Contact</a>
         <a href="#">Game Information</a>
         <a href="./rules.html">Rules</a>
+        <a href="./registration.html">Registration</a>
     </nav>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
@@ -27,7 +28,7 @@
         <h3>Game Information</h3>
     </div>
 
-    <main>
+    <main class="gameinfo-main">
         <section class="game-info">
             <h2>Fall Schedule</h2>
             <table>
@@ -105,6 +106,67 @@
                     <p><span>Email:</span><a
                             href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a>
                     </p>
+                </div>
+            </div>
+        </section>
+        <section class="location-maps">
+            <h2>Locations</h2>
+            <div class="location-cards">
+                <div class="card">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1522120.20815658!2d-88.85726832577392!3d41.83064452170737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses-419!2sar!4v1675818892166!5m2!1ses-419!2sar"
+                        title="AJ Katzenmaier Elementary School Map" width="600" height="450" style="border:0;"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                    <div>
+                        <h4>AJ Katzenmaier Elementary School</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d378819.54224457097!2d-88.03423258991812!3d42.117585564899606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses-419!2sar!4v1675819135340!5m2!1ses-419!2sar"
+                        title="Greenbay Elementary School Map" width="600" height="450" style="border:0;"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div>
+                        <h4>Greenbay Elementary School</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d378753.887129066!2d-88.02670528366592!3d42.12856761338677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1675819389283!5m2!1ses-419!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        title="Marjorie Hart Elementary School Map"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div>
+                        <h4>Marjorie P Hart Elementary School</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230085.9637379501!2d-88.02410047270486!3d42.29536020048131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675819552111!5m2!1ses-419!2sar"
+                        title="Howard Yeager Elementary School Map" width="600" height="450" style="border:0;"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div>
+                        <h4>Howard A Yeager Elementary School</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d379401.04122084886!2d-88.446347534375!3d42.020217099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fb7ad3c474b63%3A0x93bdf85af2a839ed!2sSOUTH%20ELEMENTARY%20SCHOOL!5e0!3m2!1ses-419!2sar!4v1675819881459!5m2!1ses-419!2sar"
+                        title="South Elementary School Map" width="600" height="450" style="border:0;"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div>
+                        <h4>South Elementary School</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d377748.8252756465!2d-88.02768926139518!3d42.29639371978329!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fb5780ddb9c43%3A0x227feb04cbcf4c4!2sNorth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1675819796513!5m2!1ses-419!2sar"
+                        title="North Elementary School Map" width="600" height="450" style="border:0;"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div>
+                        <h4>North Elementary School</h4>
+                    </div>
                 </div>
             </div>
         </section>
