--- a/pages/show_data.html
+++ b/pages/show_data.html
@@ -1,17 +1,40 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>Feedback Sent</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="../assets/img/Logo_Mighty_ducks-01.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/style3.css">
+    <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
-<p align=center>&nbsp;</p>
-<h1 align=center><font size="+1">The following information has been sent as your
-  feedback:</font></h1>
+  <nav>
+    <a href="./index.html">Home</a>
+    <a href="./aboutMDHL.html">About MDHL</a>
+    <a href="./contact.html">Contact</a>
+    <a href="./game_info.html">Game Information</a>
+    <a href="#">Rules</a>
+    <a href="./registration.html">Registration</a>
+</nav>
+<header>
+    <h1>Mighty Ducks Hockey League</h1>
+    <img src="../assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
+</header>
+<div class="titles">
+  <h3>Feedback Information</h3>
+</div>
 
-<table border="1" align=center width="226">
-  <tr>
-    <th align="center">Form Field</th>
-    <th align="center">Field Value</th>
-  </tr>
+<div class="table-feedback">
+  <table>
+    <caption>The following information has been sent as your
+      feedback:</caption>
+    <tr>
+      <th>Form Field</th>
+      <th>Field Value</th>
+    </tr>
+</div>
 
 <script language="javascript">
 var args = location.search.substr(1).split('&');
