--- a/pages/aboutMDHL.html
+++ b/pages/aboutMDHL.html
@@ -18,6 +18,7 @@
         <a href="./contact.html">Contact</a>
         <a href="./game_info.html">Game Information</a>
         <a href="./rules.html">Rules</a>
+        <a href="./registration.html">Registration</a>
     </nav>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
