--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,9 +14,10 @@
     <nav>
         <a href="./index.html">Home</a>
         <a href="./aboutMDHL.html">About MDHL</a>
-        <a class="active" href="#">Contact</a>
+        <a href="#">Contact</a>
         <a href="./game_info.html">Game Information</a>
         <a href="./rules.html">Rules</a>
+        <a href="./registration.html">Registration</a>
     </nav>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
