--- a/pages/index.html
+++ b/pages/index.html
@@ -12,11 +12,12 @@
 
 <body>
     <nav>
-        <a class="active" href="#">Home</a>
+        <a href="#">Home</a>
         <a href="./aboutMDHL.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
         <a href="./game_info.html">Game Information</a>
         <a href="./rules.html">Rules</a>
+        <a href="./registration.html">Registration</a>
     </nav>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
