--- a/pages/rules.html
+++ b/pages/rules.html
@@ -17,6 +17,7 @@
         <a href="./contact.html">Contact</a>
         <a href="./game_info.html">Game Information</a>
         <a href="#">Rules</a>
+        <a href="./registration.html">Registration</a>
     </nav>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
